<?xml version="1.0" encoding="utf-8"?>
<!--
    GRUPO RAIDO CONFIDENTIAL
    __________________

      [2015] - [2015] Grupo Raido SAPI de CV
      All Rights Reserved.

    NOTICE: All information contained herein is, and remains
    the property of Grupo Raido SAPI de CV and its suppliers,
    if any. The intellectual and technical concepts contained
    herein are proprietary to Grupo Raido SAPI de CV and its
    suppliers and may be covered by México and Foreign Patents,
    patents in process, and are protected by trade secret or
    copyright law. Dissemination of this information or
    reproduction of this material is strictly forbidden unless
    prior written permission is obtained from Grupo Raido SAPI
    de CV.
-->

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    card_view:cardBackgroundColor="@color/card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bottom_border"
            android:paddingBottom="8dp"
            android:text="@string/quote_title"
            android:textColor="@color/highlight"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/quote_labor"
                android:textColor="@color/normal"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.rey.material.widget.EditText
                android:id="@+id/quote_form_laborEditText"
                style="@style/LightEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:width="80dp"
                android:gravity="right"
                android:hint="@string/number_zero"
                android:inputType="numberDecimal"
                android:textColor="@color/normal"
                android:textColorHint="@color/inactive"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/quote_materials"
                android:textColor="@color/normal"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.rey.material.widget.EditText
                android:id="@+id/quote_form_materialsEditText"
                style="@style/LightEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:width="80dp"
                android:gravity="right"
                android:hint="@string/number_zero"
                android:inputType="numberDecimal"
                android:textColor="@color/normal"
                android:textColorHint="@color/inactive"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quote_total"
                android:textColor="@color/highlight"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/quote_form_totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/number_zero"
                android:textColor="@color/main"
                android:textSize="32sp"/>

            <ProgressBar
                android:id="@+id/quote_form_loadingProgressBar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="right"
                android:indeterminate="true"
                android:visibility="gone"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">

            <Button
                android:id="@+id/quote_form_cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/white_button"
                android:text="@string/action_cancel"
                android:textColor="@color/inactive"/>

            <Button
                android:id="@+id/quote_form_acceptButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/white_button"
                android:text="@string/action_send"
                android:textColor="@color/action"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>